@@ -81,6 +81,7 @@ Rapagnani, Giovanni
 Parker, Tom
 Pestourie, Romain
 Pourpoint, Maeva
+Rapagnani, Giovanni
 Reyes, Celso
 Ringler, Adam
 Rothenhäusler, Nicolas
